Investigate RelaunchChromeBrowserWithNewCommandLineIfNeeded log spam

BUG=648185

Review-Url: https://codereview.chromium.org/2351533004
Cr-Commit-Position: refs/heads/master@{#419889}

Former-commit-id: c5442858e4f80adbd8afe5dfcfee95b4aba1d487